package com.foundflow.founditem.domain;

public enum ItemStatus {
    STORED,
    RESERVED,
    RETURNED,
    DISPOSED
}