package com.foundflow.matching.domain;

public enum MatchStatus {
    PENDING,
    CONFIRMED,
    REJECTED
}
