package com.foundflow.pickup.domain;

public enum ScheduleRecurrenceType {
    ONCE,
    WEEKLY
}
