@startuml
skinparam classAttributeIconSize 0
hide circle

' Enums
enum Role {
  STAFF
  OPS_MANAGER
  ADMIN
}

enum ReportStatus {
  OPEN
  MATCHED
  CLOSED
  COLLECTED
}

enum ItemStatus {
  STORED
  RESERVED
  RETURNED
  DISPOSED
}

enum MatchStatus {
  PENDING
  CONFIRMED
  REJECTED
}

enum ScheduleRecurrenceType {
  ONCE
  WEEKLY
}

' Shared embeddable
class ItemAttributes {
  - category: String
  - brand: String
  - color: String
  - marks: List<String>
}

' Services / domain entities
class Venue {
  - id: UUID
  - name: String
  - tone: String
  - defaultLanguage: String
}

class User {
  - id: UUID
  - email: String
  - role: Role
  - passwordHash: String
  - venueId: UUID
}

class FoundItem {
  - id: UUID
  - photoKey: String
  - description: String
  - foundAt: DateTime
  - locationHint: String
  - status: ItemStatus
  - venueId: UUID
  - reporterId: UUID
  - attributes: ItemAttributes
}

class LostReport {
  - id: UUID
  - photoKey: String
  - description: String
  - lostAt: DateTime
  - location: String
  - status: ReportStatus
  - venueId: UUID
  - contactEmail: String
  - attributes: ItemAttributes
}

class Match {
  - id: UUID
  - foundItemId: UUID
  - lostReportId: UUID
  - venueId: UUID
  - recipientEmail: String
  - status: MatchStatus
  - attributeScore: float
  - semanticScore: float
  - combinedScore: float
  - createdAt: DateTime
}

class Notification {
  - id: UUID
  - matchId: UUID
  - venueId: UUID
  - recipientAddress: String
  - language: String
  - subject: String
  - header: String
  - body: String
  - sentAt: DateTime
}

class Pickup {
  - id: UUID
  - pickupAt: DateTime
  - venueId: UUID
  - matchId: UUID
  - email: String
}

class PickupSchedule {
  - id: UUID
  - recurrenceType: ScheduleRecurrenceType
  - startDate: Date
  - endDate: Date
  - dayOfWeek: DayOfWeek
  - startTime: Time
  - endTime: Time
  - slotLengthInMinutes: int
  - venueId: UUID
}

class MatchEmailLog {
  - id: UUID
  - recipient: String
  - venueId: UUID
  - matchId: UUID
  - subject: String
  - body: String
  - magicLink: String
  - sentAt: DateTime
}

class PickupEmailLog {
  - id: UUID
  - recipient: String
  - venueId: UUID
  - subject: String
  - body: String
  - magicLink: String
  - sentAt: DateTime
}

' Associations (representational - many relations modelled by UUID references)
Venue "0..1" -- "*" User : assigned
Venue "1" -- "*" FoundItem : owns
Venue "1" -- "*" LostReport : owns
Venue "1" -- "*" Match : owns
Venue "1" -- "*" Notification : owns
Venue "1" -- "*" Pickup : owns
Venue "1" -- "*" PickupSchedule : defines
Venue "1" -- "*" MatchEmailLog : logs
Venue "1" -- "*" PickupEmailLog : logs

User "1" -- "*" FoundItem : reporter

' Embedded attribute composition
FoundItem "1" *-- "1" ItemAttributes : attributes
LostReport "1" *-- "1" ItemAttributes : attributes

' Match / Notification relations (by id refs)
Match "*" -- "1" FoundItem : foundItem (id)
Match "*" -- "1" LostReport : lostReport (id)
Notification "*" -- "1" Match : match
Pickup "0..1" -- "1" Match : match
MatchEmailLog "*" -- "1" Match : match

@enduml
